--- a/v1.0/config.ini
+++ b/v1.0/config.ini
@@ -16,4 +16,7 @@ WEBDRIVER_PATH:
 [output_path]
 MP3_OUT_PATH: ./testing/mp3_downloads/
 
+[authentication_data]
+AUTH_DATA_PATH:
+
 # https://docs.python.org/3/library/configparser.html
