--- a/v1.0/config.ini
+++ b/v1.0/config.ini
@@ -2,7 +2,7 @@
 MAIN_URL: https://www.broadcastify.com/
 FEED_URL_STEM: ${MAIN_URL}listen/feed/
 ARCHIVE_FEED_STEM: ${MAIN_URL}archives/feed/
-ARCHIVE_DOWNLOAD_STEM: ${MAIN_URL}archives/id/'
+ARCHIVE_DOWNLOAD_STEM: https://m.broadcastify.com/archives/id/
 LOGIN_URL: ${MAIN_URL}login/
 
 [throttle_times]
@@ -16,7 +16,7 @@ WEBDRIVER_PATH:
 [output_path]
 MP3_OUT_PATH: ./testing/mp3_downloads/
 
-[authentication_data]
-AUTH_DATA_PATH:
+[authentication_path]
+AUTH_DATA_PATH: ./private/pwd.ini
 
 # https://docs.python.org/3/library/configparser.html
