--- a/config.ini
+++ b/config.ini
@@ -16,4 +16,7 @@ WEBDRIVER_PATH: chromedriver
 [output_path]
 MP3_OUT_PATH: ./testing/mp3_downloads/
 
+[authentication_path]
+AUTH_DATA_PATH: ./private/pwd.ini
+
 # https://docs.python.org/3/library/configparser.html
