Commit fixes for new download stem 'm.broadcastify.com'

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 MAIN_URL: https://www.broadcastify.com/
 FEED_URL_STEM: ${MAIN_URL}listen/feed/
 ARCHIVE_FEED_STEM: ${MAIN_URL}archives/feed/
-ARCHIVE_DOWNLOAD_STEM: ${MAIN_URL}archives/id/'
+ARCHIVE_DOWNLOAD_STEM: https://m.broadcastify.com/archives/id/
 LOGIN_URL: ${MAIN_URL}login/
 
 [throttle_times]
