--- a/sample_pwd.ini
+++ b/sample_pwd.ini
@@ -1,5 +1,9 @@
 # Don't modify the line below
 [authentication_data]
 # Add your Broadcastify Premium account information below. Do not enclose in single or double quotes.
+# For example:
+# username: johndoe
+# password: @nonymou$1
+
 username:
 password:
