Clean up tree: rem v1 folder; add dev & testing folders

--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,10 @@ LOGIN_URL: ${MAIN_URL}login/
 [throttle_times]
 # Seconds to wait between file or page requests, respectively
 FILE_REQUEST_WAIT: 5
-PAGE_REQUEST_WAIT: 2
+PAGE_REQUEST_WAIT: 0.5
 
 [selenium_config]
-WEBDRIVER_PATH: chromedriver
+WEBDRIVER_PATH:
 
 [output_path]
 MP3_OUT_PATH: ./testing/mp3_downloads/
