major object model updates for v1

--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,7 @@ LOGIN_URL: ${MAIN_URL}login/
 # Seconds to wait between file or page requests, respectively
 FILE_REQUEST_WAIT: 5
 PAGE_REQUEST_WAIT: 0.5
+DATE_NAV_WAIT: 0.1
 
 [selenium_config]
 WEBDRIVER_PATH:
