--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ remote_theme: pmarsceill/just-the-docs
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: The Broadcastify Archive Toolkit for python
+title: The Broadcastify Archive Toolkit
 # description: A Jekyll theme for documentation
 baseurl: "/broadcastify-archtk" # the subpath of your site, e.g. /blog
 url: "https://ljhopkins2.github.io" # the base hostname & protocol for your site, e.g. http://example.com
