Update copyright with link to license

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -43,7 +43,7 @@ aux_links:
     - "//pypi.org/project/broadcastify-archtk/"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2019 Joseph Hopkins." #Distributed by an <a href=\"https://github.com/pmarsceill/just-the-docs/tree/master/LICENSE.txt\">MIT license.</a>"
+footer_content: "Copyright &copy; 2019 Joseph Hopkins." Distributed via the <a href=\"https://github.com/ljhopkins2/broadcastify-archtk/blob/master/barchtk_distribution/LICENSE\">GNU AFFERO General Public License, Version 3.</a>"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
